# 2nd_hackathon

./: .env.example  .gitignore  CLAUDE.md  README.md  constitution.md  guide.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test_db.py  tsconfig.json
.claude/: settings.local.json
.spec-kit/: config.yaml
.specify/memory/: 01-phase-i-constitution.md  02-phase-ii-constitution.md  03-phase-iii-constitution.md  04-phase-iv-constitution.md  06-phase-v-constitution.md  main-constitution.md
app/auth/: page.tsx
app/dashboard/: page.tsx
backend/: auth_utils.py  database.py  index.py  main.py  pyproject.toml  requirements.txt
better_auth_archive/: auth.ts
components/: SignOutButton.tsx  TaskInterface.tsx
frontend/: .env.example  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/lib/: auth.ts
src/: main.py  test_core.py
src/backend/: .env.example  database.py  main.py  mcp_config.py  pyproject.toml  test_phase3.py
src/backend/agents/: orchestrator.py
src/backend/agents/skills/: mcp_agent_interface.py  todo_mcp_tools.py
src/backend/agents/subagents/: nlp_agent.py
src/frontend/: .env.example  package-lock.json  package.json
src/frontend/app/: layout.tsx  page.tsx
src/frontend/app/chatbot/: page.tsx
src/frontend/app/docs/: route.ts
src/frontend/app/health/: route.ts
src/frontend/app/openapi.json/: route.ts
src/frontend/components/: ChatbotInterface.tsx  GuestButton.tsx  TaskInterface.tsx
src/frontend/lib/: auth.ts
(+4 files in other folders)
